# io-vdir

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  deny.toml  flake.nix
examples/: std-list-collections.rs
src/: collection.rs  constants.rs  item.rs  lib.rs
src/coroutines/: create-collection.rs  create-item.rs  delete-collection.rs  delete-item.rs  list-collections.rs  list-items.rs  mod.rs  read-item.rs  update-collection.rs  update-item.rs
tests/: std.rs
