[package]
name = "io-vdir"
description = "Set of I/O-free coroutines to manage Vdir filesystems"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "filesystem"]
keywords = ["io-free", "coroutine", "vdir", "vcard", "ical"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-vdir/latest/io_vdir"
repository = "https://github.com/pimalaya/io-vdir"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
env_logger = "0.11"
io-fs = { version = "0.0.1", default-features = false, features = ["std"] }
tempfile = "3.20"

[dependencies]
calcard = "0.1"
io-fs = { version = "0.0.1", default-features = false }
log = "0.4"
memchr = "2.7"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
